# project-euler

./: README.md  pyproject.toml
Problem 002/: README.md  answer.py
Problem 003/: README.md
Problem 004/: README.md
Problem 006/: README.md  answer.js
Problem 007/: README.md
Problem 008/: answer.go
Problem 009/: README.md  answer.ts
Problem 1/: README.md  answer.py
Problem 10/: README.md  answer.go
Problem 2/: answer.py
Problem 3/: answer.py
Problem 4/: answer.py
Problem 5/: README.md  answer.go
Problem 7/: README.md  answer.py
Problem 8/: README.md
Problem 9/: README.md  answer.ts
problem001/: Main.java  problem_001.md  solution_1.py
problem002/: problem_002.md  solution_2.py
scripts/: check_answer.py  create_new_problem.py  main.py  time.py
