[tool.poetry]
name = "project-euler"
version = "0.1.0"
description = ""
authors = ["do-ald533 <douglas.aldred533@gmail.com>"]
readme = "README.md"
packages = [{include = "project_euler"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
